<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:title="@string/beranda"
        android:icon="@drawable/ic_home"
        android:enabled="true"/>

    <item
        android:id="@+id/sholat"
        android:title="@string/sholat"
        android:icon="@drawable/ic_timer"
        android:enabled="true"/>

    <item
        android:id="@+id/kiblat"
        android:title="@string/kiblat"
        android:icon="@drawable/ic_airplanemode"
        android:enabled="true"/>

    <item
        android:id="@+id/kesehatan"
        android:title="@string/kesehatan"
        android:icon="@drawable/ic_favorite"
        android:enabled="true"/>

    <item
        android:id="@+id/author"
        android:title="@string/author"
        android:icon="@drawable/ic_person"
        android:enabled="true"/>
</menu>