<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
        android:orientation="vertical">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

    <TextView
        android:textSize="25sp"
        android:id="@+id/author"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/huruf"
        android:paddingLeft="10dp"
        android:paddingTop="15dp"
        android:text="@string/akselerasi"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:fontFamily="@font/asap_medium"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"/>

            <TextView
                android:id="@+id/teridri"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terdiri"
                android:layout_below="@+id/author"
                android:paddingTop="15dp"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/fadiya"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Fadiya"
                android:paddingTop="10dp"
                android:layout_below="@id/teridri"
                android:textSize="15sp"/>
            <TextView
                android:id="@+id/pad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pad"
                android:textColor="@color/huruf"
                android:layout_below="@id/fadiya"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/sapi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Safira"
                android:layout_below="@id/pad"
                android:paddingTop="10dp"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/safira"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pad"
                android:textColor="@color/huruf"
                android:layout_below="@id/sapi"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/anggi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Anggi"
                android:layout_below="@id/safira"
                android:paddingTop="10dp"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/nolay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/anggi"
                android:textColor="@color/huruf"
                android:layout_below="@id/anggi"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/khal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/khalipah"
                android:layout_below="@id/nolay"
                android:paddingTop="10dp"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/khalipah"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/khal"
                android:textColor="@color/huruf"
                android:layout_below="@id/khal"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/nay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nay"
                android:layout_below="@id/khalipah"
                android:paddingTop="10dp"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/nayla"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nayla"
                android:textColor="@color/huruf"
                android:layout_below="@id/nay"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/ustdzh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ustzh"
                android:textColor="@color/huruf"
                android:layout_below="@id/nayla"
                android:textSize="15sp"
                android:paddingTop="10dp"/>

            <TextView
                android:id="@+id/halo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ustdzh"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="41dp"
                android:paddingTop="10dp"
                android:paddingBottom="60dp"
                android:text="@string/manfaat"
                android:textSize="17sp"
                tools:ignore="RtlSymmetry" />


        </RelativeLayout>
    </ScrollView>

</RelativeLayout>